made changes by comments

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,21 +1,18 @@
 .login {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
+  height: 100%;
+  width: 100%;
 
   &-wrapper {
-    width: 540px;
     display: flex;
     flex-direction: column;
-    background-color: #eceff1;
+    width: 540px;
     padding: 35px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: #eceff1;
     border-radius: 25px;
     box-shadow: 0 6px 17px rgb(0 0 0 / 25%);
   }
@@ -24,7 +21,12 @@
 .title {
   font-size: 36px;
   text-align: center;
+
+  &-icon {
+    color: #ff0000;
+  }
 }
+
 .sub-title {
   font-size: 20px;
   text-align: center;
