--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <section class="login">
   <div class="login-wrapper">
-    <h1 class="title">My Trello <mat-icon color="warn">favorite</mat-icon></h1>
+    <h1 class="title">
+      My Trello <mat-icon class="title-icon">favorite</mat-icon>
+    </h1>
     <h3 class="sub-title">Sign in</h3>
     <mat-form-field appearance="fill">
       <mat-label>Enter your email</mat-label>
@@ -10,15 +12,17 @@
       <mat-label>Enter your password</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'" />
       <button
-        mat-icon-button
         matSuffix
-        (click)="hide = !hide"
+        mat-icon-button
         [attr.aria-label]="'Hide password'"
         [attr.aria-pressed]="hide"
+        (click)="hide = !hide"
       >
         <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
       </button>
     </mat-form-field>
-    <button class="button-login" mat-raised-button color="primary">sign in</button>
+    <button class="button-login" mat-raised-button color="primary">
+      sign in
+    </button>
   </div>
 </section>
