created basic routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,28 @@
-<app-login></app-login>
+<nav>
+  <button
+  mat-button
+  routerLink="/"
+  routerLinkActive="active"
+  ariaCurrentWhenActive="page"
+>
+  home
+</button>
+  <button
+    mat-button
+    routerLink="/sign-in"
+    routerLinkActive="active"
+    ariaCurrentWhenActive="page"
+  >
+    Login Component
+  </button>
+  <button
+    mat-button
+    routerLink="/second-component"
+    routerLinkActive="active"
+    ariaCurrentWhenActive="page"
+  >
+    Second Component
+  </button>
+</nav>
 
 <router-outlet></router-outlet>
