--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,8 +21,6 @@
         <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
       </button>
     </mat-form-field>
-    <button class="button-login" mat-raised-button color="primary">
-      sign in
-    </button>
+    <button class="button-login" mat-raised-button>sign in</button>
   </div>
 </section>
